--- a/src/app/content/news/news.page.html
+++ b/src/app/content/news/news.page.html
@@ -1,8 +1,6 @@
 <ion-header>
 	<ion-toolbar color="tertiary">
-		<ion-buttons slot="start">
-			<ion-menu-button></ion-menu-button>
-		</ion-buttons>
+		<ion-menu-button slot="start"></ion-menu-button>
 		<ion-title class="ion-text-uppercase">
 			Course Content
 		</ion-title>
@@ -12,13 +10,13 @@
 <ion-content>
 	<div class="heading">
 		<div class="img">
-			<img src="/assets/images/PDF icon.png">
+			<img src="/assets/images/content/announc.png">
 		</div>
 		<ion-text>
 			<h1>Announcements</h1>
 			<p class="ion-no-margin">Course:
 				<br />
-				Bricklaying and Plastering
+				<!-- {{courseName}} -->
 			</p>
 		</ion-text>
 	</div>
