--- a/src/app/payment/payment.page.html
+++ b/src/app/payment/payment.page.html
@@ -1,7 +1,6 @@
 <ion-header>
   <ion-toolbar color="tertiary" class="ion-text-uppercase">
-    <ion-buttons slot="start">
-    </ion-buttons>
+    <!-- <ion-menu-button slot="start"></ion-menu-button> -->
     <ion-title>Payment</ion-title>
     <ion-back-button autoHide="false" slot="start"></ion-back-button>
   </ion-toolbar>
@@ -91,7 +90,7 @@
         </ion-col>
       </ion-row>
     </ion-grid>
-    <ion-button class="ion-margin-bottom ion-text-capitalize" color="tertiary" fill="outline" routerLink="/landing">
+    <ion-button class="ion-margin-bottom ion-text-capitalize" color="tertiary" fill="outline" routerLink="/enrolledcourses">
       Upload later
     </ion-button>
     <ion-button class="ion-margin-bottom ion-text-capitalize ion-float-right" color="tertiary" (click)="submit()">
