--- a/src/app/registration/registration.page.html
+++ b/src/app/registration/registration.page.html
@@ -206,7 +206,7 @@
               </ng-container>
             </div>
             <ion-button color="tertiary" class="ion-text-capitalize ion-margin-top ion-float-right" type="submit">
-              Next
+              Submit
             </ion-button>
             <ion-button color="tertiary" fill="outline" class="ion-text-capitalize ion-margin-top"
               (click)="changeIndex(3, 'prev')">
