--- a/src/app/registration/registration.page.scss
+++ b/src/app/registration/registration.page.scss
@@ -1,8 +1,8 @@
 ion-content {
-    --background: #E3E3E3;
+    // --background: #E3E3E3;
 
     .container {
-        background-color: #fff;
+        // background-color: #fff;
 
         ul {
             padding   : 0;
