--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,11 @@
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
+        <div class="socialIcons text-center">
+          <a class="fa fa-facebook"></a>
+          <a class="fa fa-twitter"></a>
+          <a class="fa fa-instagram"></a>
+        </div>
       </ion-content>
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
