--- a/src/app/content/video/video.page.html
+++ b/src/app/content/video/video.page.html
@@ -1,8 +1,6 @@
 <ion-header>
   <ion-toolbar color="tertiary">
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
+    <ion-menu-button slot="start"></ion-menu-button>
     <ion-title class="ion-text-uppercase">
       Course Content
     </ion-title>
@@ -12,26 +10,35 @@
 <ion-content>
   <div class="heading">
     <div class="img">
-      <img src="/assets/images/PDF icon.png">
+      <img src="/assets/images/content/video.png">
     </div>
     <ion-text>
       <h1>Videos</h1>
       <p class="ion-no-margin">Course:
         <br />
-        Bricklaying and Plastering
+        {{courseName}}
       </p>
     </ion-text>
   </div>
   <div class="container">
     <h5 class="ion-padding-top ion-margin-start">Trending on Deepeg</h5>
     <div class="empty"></div>
-    <div *ngFor="let i of [1,2,3,4,5]">
-      <video width="100%" controls controlsList="nodownload">
-        <source src="/assets/videos/VID-20200125-WA0000.mp4" type="video/mp4">
-        Video is not supported.
-      </video>
-      <h6>Hello World</h6>
-      <div class="empty"></div>
+    <div *ngIf="!loader">
+      <div *ngFor="let c of courseContent">
+        <video width="100%" controls controlsList="nodownload">
+          <source [src]="c.fileUrl" type="video/mp4">
+          Video is not supported.
+        </video>
+        <h6>{{c.title}}</h6>
+        <div class="empty"></div>
+      </div>
+    </div>
+    <div *ngIf="loader">
+      <div *ngFor="let c of [1,2,3,4,5,6,7,8,9,0]">
+        <ion-skeleton-text style="width: 100%; height: 200px;" animated></ion-skeleton-text>
+        <ion-skeleton-text class="ion-margin" style="width: 40%; height: 20px;" animated></ion-skeleton-text>
+        <div class="empty"></div>
+      </div>
     </div>
   </div>
 </ion-content>
