--- a/src/app/course/course.page.scss
+++ b/src/app/course/course.page.scss
@@ -4,7 +4,7 @@ ion-content {
         width            : 100%;
         background-repeat: no-repeat;
         background-size  : 100% 50vh;
-        box-shadow       : 0 0 0 1000px rgba(0, 0, 0, 0.5) inset;
+        box-shadow       : 0 0 0 1000px rgba(0, 0, 0, 0.8) inset;
 
         button {
             border-radius   : 50%;
@@ -22,6 +22,11 @@ ion-content {
         h1 {
             margin-top: 10px;
             font-size : 25px;
+            overflow          : hidden;
+            text-overflow     : ellipsis;
+            display           : -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 1;
         }
 
         p {
