--- a/src/app/enroll/enroll.page.html
+++ b/src/app/enroll/enroll.page.html
@@ -35,11 +35,18 @@
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col size="12" class="ion-no-padding-top">
+        <ion-col size="6" class="ion-no-padding-top">
           <div (click)="fileinput3.click()">
             <ion-icon name="cloud-upload-outline" *ngIf="!resultsUrl"></ion-icon>
             <ion-icon name="thumbs-up-sharp" *ngIf="resultsUrl"></ion-icon>
             <p> Certified NQF level 1 or Grade 9 results</p>
+          </div>
+        </ion-col>
+        <ion-col size="6" class="ion-no-padding-top">
+          <div (click)="fileinput4.click()">
+            <ion-icon name="cloud-upload-outline" *ngIf="!proofOfPayUrl"></ion-icon>
+            <ion-icon name="thumbs-up-sharp" *ngIf="proofOfPayUrl"></ion-icon>
+            <p> R500 Enrollment fee</p>
           </div>
         </ion-col>
       </ion-row>
@@ -53,3 +60,4 @@
 <input type="file" (change)="uploadID($event)" style="display:none" accept="application/pdf" #fileinput1>
 <input type="file" (change)="uploadProofOfRes($event)" style="display:none" accept="application/pdf" #fileinput2>
 <input type="file" (change)="uploadResults($event)" style="display:none" accept="application/pdf" #fileinput3>
+<input type="file" (change)="uploadProofOfPay($event)" style="display:none" accept="application/pdf" #fileinput4>
