--- a/src/app/enrolledcourses/enrolledcourses.page.scss
+++ b/src/app/enrolledcourses/enrolledcourses.page.scss
@@ -1,12 +1,3 @@
-ion-header {
-    ion-toolbar {
-        ion-icon {
-            font-size    : 25px;
-            padding-right: 16px
-        }
-    }
-}
-
 ion-content {
     --background: #E3E3E3;
 
@@ -14,8 +5,8 @@ ion-content {
         padding: 0 5px;
 
         h1 {
-            font-size  : 25px;
-            margin-left: 10px;
+            font-size     : 25px;
+            // margin-left: 10px;
         }
 
         .appliedCourse {
@@ -23,7 +14,7 @@ ion-content {
             padding         : 16px 10px;
             height          : 132px;
             position        : relative;
-            margin-bottom      : 10px;
+            margin-bottom   : 10px;
 
             img {
                 width       : 150px;
@@ -41,8 +32,8 @@ ion-content {
 
             ion-text {
                 ion-icon {
-                    font-size   : 20px;
-                    margin: 2px 8px 0 0;
+                    font-size: 20px;
+                    margin   : 2px 8px 0 0;
                 }
 
                 p {
