--- a/src/app/logout/logout.page.html
+++ b/src/app/logout/logout.page.html
@@ -1,3 +1,8 @@
 <ion-content>
-
+	<div class="container">
+		<div class="spinner-border" role="status">
+			<span class="sr-only">Loading...</span>
+		</div>
+		<h1>Loggin out...</h1>
+	</div>
 </ion-content>
