--- a/src/app/enrolledcourses/enrolledcourses.page.html
+++ b/src/app/enrolledcourses/enrolledcourses.page.html
@@ -27,7 +27,7 @@
 						</p>
 						<!-- <span class="ion-float-right"> -->
 						<ion-button size="small" color="tertiary" style="font-size: 8px; margin-left: 80%;"
-							routerLink="/payment">
+							(click)="register(c)">
 							Register
 						</ion-button>
 						<!-- </span> -->
