--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -37,7 +37,7 @@
 					<div>
 						<h1>Apply Now!</h1>
 						<p>The Ionic Master Course demo app explores the possibilites in Ionic 4.</p>
-						<ion-button routerLink="/signin" class="ion-text-capitalize" color="tertiary">
+						<ion-button (click)="disableSlides()" class="ion-text-capitalize" color="tertiary">
 							Sign in to view more
 						</ion-button>
 					</div>
