--- a/src/app/content/news/news.page.html
+++ b/src/app/content/news/news.page.html
@@ -16,7 +16,7 @@
 			<h1>Announcements</h1>
 			<p class="ion-no-margin">Course:
 				<br />
-				<!-- {{courseName}} -->
+				{{courseName}}
 			</p>
 		</ion-text>
 	</div>
