--- a/src/app/enrolledcourses/enrolledcourses.page.html
+++ b/src/app/enrolledcourses/enrolledcourses.page.html
@@ -34,9 +34,9 @@
 					</ion-text>
 				</div>
 			</div>
-			<div *ngIf="isRegisteredCoures">
+			<div *ngIf="isRegisteredcourse">
 				<h5>Registered course</h5>
-				<div class="appliedCourse" id="top" *ngFor="let c of registeredCoures">
+				<div class="appliedCourse" id="top" *ngFor="let c of registeredcourse">
 					<img [src]="c.coverUrl">
 					<ion-text>
 						<h1>{{c.name}}</h1>
