--- a/src/app/content/news/news.page.html
+++ b/src/app/content/news/news.page.html
@@ -20,7 +20,11 @@
 			</p>
 		</ion-text>
 	</div>
-	<div class="container">
+	<div class="container" *ngIf="!loader && !content">
+		<ion-text color="danger" class="ion-padding">No content available!</ion-text>
+	</div>
+
+	<div class="container" *ngIf="!loader && content">
 		<h5 class="ion-padding-top ion-margin-start">Latest news</h5>
 		<div class="empty"></div>
 		<ion-list lines="none">
@@ -38,8 +42,25 @@
 			</ion-item>
 		</ion-list>
 	</div>
-</ion-content>
 
+	<div class="container" *ngIf="loader">
+		<h5 class="ion-padding-top ion-margin-start">Latest news</h5>
+		<div class="empty"></div>
+		<ion-list lines="none">
+			<ion-item *ngFor="let i of [1,2,3,4,5,6,7,8,9]">
+				<ion-thumbnail slot="start">
+					<ion-skeleton-text style="width: 100%; height: 100%" animated></ion-skeleton-text>
+				</ion-thumbnail>
+				<ion-text>
+					<h5 class="ion-no-margin">
+						<ion-skeleton-text style="width: 100px; height: 18px;" animated></ion-skeleton-text>
+					</h5>
+					<ion-skeleton-text style="width: 200px; height: 14px;" animated></ion-skeleton-text>
+				</ion-text>
+			</ion-item>
+		</ion-list>
+	</div>
+</ion-content>
 <ion-footer class="ion-padding">
 	<div class="btn-group">
 		<ion-grid class="ion-no-padding">
